Used PromtTemplate to generate subtopic headings and description of what the subtopic should contain

--- a/notebooks/benchmate.ipynb
+++ b/notebooks/benchmate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "id": "aee07414",
    "metadata": {},
    "outputs": [],
@@ -11,23 +11,16 @@
     "import toml\n",
     "from ollama import chat\n",
     "from ollama import ChatResponse\n",
-    "from ollama import Client\n"
+    "from ollama import Client\n",
+    "from langchain_core.prompts import PromptTemplate\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "cf25df27",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'api_keys': {'openai': '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'}}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "# Load a TOML file\n",
@@ -39,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 56,
    "id": "755429bd",
    "metadata": {},
    "outputs": [],
@@ -67,9 +60,9 @@
     "        self.messages = []\n",
     "        return True\n",
     "\n",
-    "    def local_generate(self, prompt: str, max_tokens: int = 1500) -> str:\n",
+    "    def local_generate(self, prompt: str, max_tokens: int = 1500, **kwargs) -> str:\n",
     "        self.messages.append({\"role\": \"user\", \"content\": prompt})\n",
-    "        response = self.client.chat(model=self.model_name, messages=self.messages)\n",
+    "        response = self.client.chat(model=self.model_name, messages=self.messages, **kwargs)\n",
     "        self.messages.append({\"role\": \"assistant\", \"content\": response.message.content.strip()})\n",
     "        return response.message.content.strip()\n",
     "    \n",
@@ -79,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 57,
    "id": "df15d478",
    "metadata": {},
    "outputs": [],
@@ -89,123 +82,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "id": "82a967f3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'The capital of India is New Delhi.'"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model.local_generate(\"What is the capital of India?\")"
+    "# model.local_generate(\"What is the capital of India?\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "id": "7fbd3b63",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"New Delhi, being a large and populous city in northern India, experiences a semi-arid climate with extreme temperature variations throughout the year.\\n\\nIn winter (December to February), it can get quite cold, with average temperatures ranging from 10°C to 18°C (50°F to 64°F).\\n\\nSummer (March to May) is extremely hot, with temperatures often reaching up to 45°C (113°F). The heat and humidity can be unbearable during this time.\\n\\nMonsoon season (June to September) brings significant rainfall, but it's usually not as severe as in other parts of India.\\n\\nAutumn (October to November) is a pleasant season, with comfortable temperatures ranging from 15°C to 25°C (59°F to 77°F).\\n\\nIt's worth noting that New Delhi can be quite polluted, especially during the winter months when the air quality is often hazardous due to high levels of particulate matter.\\n\\nIf you're planning a visit to New Delhi, it's essential to stay hydrated and take necessary precautions to protect yourself from the heat.\""
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model.local_generate(\"What is the weather like there?\")"
+    "# model.local_generate(\"What is the weather like there?\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "id": "96cfee15",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"The best month to visit New Delhi depends on your preferences and what you want to do during your trip.\\n\\n**Best time: October to November**\\n\\nAutumn is a great time to visit New Delhi, with comfortable temperatures (15°C to 25°C or 59°F to 77°F) and pleasant weather. The air quality is generally good, making it ideal for outdoor activities like sightseeing, walking, or cycling. This period also marks the beginning of the festival season in India, with many cultural events and celebrations taking place.\\n\\n**Other considerations:**\\n\\n* **Winter (December to February):** If you're sensitive to cold, winter might not be the best time for you. However, if you prefer cooler weather and don't mind the crowds, this period can be a good option.\\n* **Summer (March to May):** If you're looking for beach activities or enjoy warm weather, summer might be the best time for you. However, be prepared for extreme heat and humidity.\\n* **Monsoon season (June to September):** While some people enjoy the green landscapes during monsoon, it's not ideal for tourists due to frequent rain showers and flooding.\\n\\n**Festivals and events:**\\n\\nNew Delhi hosts various festivals and events throughout the year. Some notable ones include:\\n\\n* **Diwali (October/November):** The festival of lights is a major celebration in India.\\n* **Holi (February/March):** A colorful festival marking the arrival of spring.\\n* **Navratri (September/October):** A 9-day celebration honoring the divine feminine.\\n\\nKeep in mind that popular tourist destinations like the Red Fort, Qutub Minar, and other major attractions might be crowded during these festivals.\""
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model.local_generate(\"What is the best month to visit?\")"
+    "# model.local_generate(\"What is the best month to visit?\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "id": "34a8de6a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'October'"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model.local_generate(\"What is the best month to visit? Just give me the month name, no other text.\")"
+    "# model.local_generate(\"What is the best month to visit? Just give me the month name, no other text.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "id": "41b5f5a0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'role': 'system', 'content': 'you are a helpful assistant'},\n",
-       " {'role': 'user', 'content': 'What is the capital of India?'},\n",
-       " {'role': 'assistant', 'content': 'The capital of India is New Delhi.'},\n",
-       " {'role': 'user', 'content': 'What is the weather like there?'},\n",
-       " {'role': 'assistant',\n",
-       "  'content': \"New Delhi, being a large and populous city in northern India, experiences a semi-arid climate with extreme temperature variations throughout the year.\\n\\nIn winter (December to February), it can get quite cold, with average temperatures ranging from 10°C to 18°C (50°F to 64°F).\\n\\nSummer (March to May) is extremely hot, with temperatures often reaching up to 45°C (113°F). The heat and humidity can be unbearable during this time.\\n\\nMonsoon season (June to September) brings significant rainfall, but it's usually not as severe as in other parts of India.\\n\\nAutumn (October to November) is a pleasant season, with comfortable temperatures ranging from 15°C to 25°C (59°F to 77°F).\\n\\nIt's worth noting that New Delhi can be quite polluted, especially during the winter months when the air quality is often hazardous due to high levels of particulate matter.\\n\\nIf you're planning a visit to New Delhi, it's essential to stay hydrated and take necessary precautions to protect yourself from the heat.\"},\n",
-       " {'role': 'user', 'content': 'What is the best month to visit?'},\n",
-       " {'role': 'assistant',\n",
-       "  'content': \"The best month to visit New Delhi depends on your preferences and what you want to do during your trip.\\n\\n**Best time: October to November**\\n\\nAutumn is a great time to visit New Delhi, with comfortable temperatures (15°C to 25°C or 59°F to 77°F) and pleasant weather. The air quality is generally good, making it ideal for outdoor activities like sightseeing, walking, or cycling. This period also marks the beginning of the festival season in India, with many cultural events and celebrations taking place.\\n\\n**Other considerations:**\\n\\n* **Winter (December to February):** If you're sensitive to cold, winter might not be the best time for you. However, if you prefer cooler weather and don't mind the crowds, this period can be a good option.\\n* **Summer (March to May):** If you're looking for beach activities or enjoy warm weather, summer might be the best time for you. However, be prepared for extreme heat and humidity.\\n* **Monsoon season (June to September):** While some people enjoy the green landscapes during monsoon, it's not ideal for tourists due to frequent rain showers and flooding.\\n\\n**Festivals and events:**\\n\\nNew Delhi hosts various festivals and events throughout the year. Some notable ones include:\\n\\n* **Diwali (October/November):** The festival of lights is a major celebration in India.\\n* **Holi (February/March):** A colorful festival marking the arrival of spring.\\n* **Navratri (September/October):** A 9-day celebration honoring the divine feminine.\\n\\nKeep in mind that popular tourist destinations like the Red Fort, Qutub Minar, and other major attractions might be crowded during these festivals.\"},\n",
-       " {'role': 'user',\n",
-       "  'content': 'What is the best month to visit? Just give me the month name, no other text.'},\n",
-       " {'role': 'assistant', 'content': 'October'}]"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model.messages"
+    "# model.messages"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "ebba9146",
    "metadata": {},
    "outputs": [
@@ -215,24 +142,98 @@
        "True"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.clear_messages()"
+    "# model.clear_messages()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3d309c7",
+   "id": "83b64fe2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "365d3732",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.local_generate()"
+    "topic = \"The Emergency in India (1975-1977)\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "775d76e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "generate_subtopics = PromptTemplate.from_template(\n",
+    "    \"\"\"Generate a list of 5 subheadings for a highschool essay on {topic}. Provide output in json format as follows:\n",
+    "    {{'<title>':'<description>',\n",
+    "    '<title>':'<description>',...}}\n",
+    "    \"\"\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "dc351d0a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Generate a list of 5 subheadings for a highschool essay on The Emergency in India (1975-1977). Provide output in json format as follows:\\n    {'<title>':'<description>',\\n    '<title>':'<description>',...}\\n    \""
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "subtopics_prompt = generate_subtopics.format(topic=topic)\n",
+    "subtopics_prompt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "633d4f55",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"Declarations of Emergency: What Led to the 1975 Crisis?\":\"An analysis of Indira Gandhi\\'s motivations and decisions that led to the imposition of the Emergency\",\\n\"The Impact on India\\'s Democracy: A Critical Examination of the Emergency Period\":\"A discussion on how the Emergency affected the country\\'s constitutional framework and democratic institutions\",\\n\"Rise of Opponents: The Emergence of Opposition Movements During the Emergency\":\"An exploration of the various opposition movements that emerged during the Emergency period, including the Congress (R) Party and the Janata Party\",\\n\"Economic Reforms Under Emergency Rule\":\"An examination of the economic policies implemented by the government during the Emergency, including price controls, nationalization, and export restrictions\",\\n\"Legacy of the Emergency: The Road to Restitution of Democracy in India\":\"A consideration of the lasting impact of the Emergency on Indian politics and society, and the steps taken to restore democracy and the rule of law\"}'"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.local_generate(subtopics_prompt, format='json')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d2e8c32",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
